Updates from Overleaf

--- a/paper/sample-papers/plots/yeast-oneC-0.tex
+++ b/paper/sample-papers/plots/yeast-oneC-0.tex
@@ -25,10 +25,10 @@ xtick={.01,.03,.05,.1,.15,.2},
 xticklabels = {,,,,,},
 y grid style={white!69.0196078431373!black},
 ymajorgrids,
-ymin=-0.045, ymax=0.535432432432432,
+ymin=-0.045, ymax=1.05,
 ytick style={color=black},
-ytick={.0,.1,.2,.3,.4,.5},
-yticklabels = {.0,.1,.2,.3,.4,.5},
+ytick={.0,.2,.4,.6,.8,1.},
+yticklabels = {.0,.2,.4,.6,.8,1.},
 height=4.3cm,
 width=7cm,
 ]
