--- a/paper/sample-papers/plots/glass-oneC-6.tex
+++ b/paper/sample-papers/plots/glass-oneC-6.tex
@@ -22,7 +22,9 @@ xticklabels = {.01,.03,.05,.1,.15,.2},
 %xticklabels = {,,,,,},
 y grid style={white!69.0196078431373!black},
 ymajorgrids,
-ymin=-0.045, ymax=0.838619047619048,
+ytick={.0,.2,.4,.6,.8,1.},
+yticklabels = {.0,.2,.4,.6,.8,1.},
+ymin=-0.045, ymax=1.05,
 ytick style={color=black},
 height=4.3cm,
 width=7cm,
