--- a/paper/sample-papers/sections/04-02-cars.tex
+++ b/paper/sample-papers/sections/04-02-cars.tex
@@ -1,6 +1,6 @@
 \subsection{cars}
 
-
+Results for \textit{cars} dataset are presented in \cref{fig:cars} and \cref{tab:cars}. Dataset is unbalanced, \cref{fig:cars:dist-class}. The baseline error ranges from <7\% to 95\% (QDA). No visible difference for SVM, DT (only avgC for $\epsilon = 0.01$
 
 
 \begin{figure}[htbp]
@@ -58,7 +58,7 @@
  % The caption goes in the second argument, and the table contents
  % go in the third argument.
 \floatconts
-  {tab:cars-results}%
+  {tab:cars}%
   {\caption{cars dataset}}%
   {
 \begin{tabular}{cl|lll|lll|lll|lll|lll}
