paper - tables corrected for better visualization

--- a/paper/sample-papers/sections/04-02-cars.tex
+++ b/paper/sample-papers/sections/04-02-cars.tex
@@ -65,6 +65,7 @@ Results for \textit{cars} dataset are presented in \cref{fig:cars} and \cref{tab
              && \multicolumn{3}{c|}{$\epsilon=0.01$} & \multicolumn{3}{c|}{$\epsilon=0.05$} & \multicolumn{3}{c|}{$\epsilon=0.1$} & \multicolumn{3}{c|}{$\epsilon=0.15$} & \multicolumn{3}{c}{$\epsilon=0.2$} \\
 \hline
 \hline
+\hline
 \multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            & $-$        & $-$        &            &            & $-$        &            &            & $-$        &            &            & $+$        &            &            & $+$         \\
 &ip\_m        & $+$        &            & $-$        &            &            & $-$        &            &            & $-$        &            &            & $+$        &            &            & $+$         \\
 &m            & $+$        & $+$        &            & $+$        & $+$        &            & $+$        & $+$        &            & $-$        & $-$        &            & $-$        & $-$        &             \\
@@ -74,6 +75,7 @@ Results for \textit{cars} dataset are presented in \cref{fig:cars} and \cref{tab
 \multirow{3}{*}{\rotatebox[origin=c]{90}{$avgC$}}&ip           &            & $-$        & $+$*       &            &            & $+$        &            &            & $+$        &            &            & $-$        &            &            & $-$         \\
 &ip\_m        & $+$        &            & $+$*       &            &            & $+$        &            &            & $+$        &            &            & $-$        &            &            & $-$         \\
 &m            & $-$*       & $-$*       &            & $-$        & $-$        &            & $-$        & $-$        &            & $+$        & $+$        &            & $+$        & $+$        &             \\
+\hline
 \hline
 \hline
 \multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            & $-$        & $-$*       &            & $-$        & $-$        &            & $-$        & $-$        &            & $-$        & $-$        &            &            & $-$         \\
@@ -87,6 +89,7 @@ Results for \textit{cars} dataset are presented in \cref{fig:cars} and \cref{tab
 &m            & $-$*       & $-$*       &            & $-$        & $-$        &            & $-$        & $-$        &            & $-$        & $-$        &            & $-$        & $-$        &             \\
 \hline
 \hline
+\hline
 \multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$        & $-$*       &            & $-$        & $-$*       &            &            & $-$         \\
 &ip\_m        & $+$*       &            & $-$*       & $+$*       &            & $-$*       & $+$        &            & $-$*       & $+$        &            & $-$*       &            &            & $-$         \\
 &m            & $+$*       & $+$*       &            & $+$*       & $+$*       &            & $+$*       & $+$*       &            & $+$*       & $+$*       &            & $+$        & $+$        &             \\
@@ -96,6 +99,7 @@ Results for \textit{cars} dataset are presented in \cref{fig:cars} and \cref{tab
 \multirow{3}{*}{\rotatebox[origin=c]{90}{$avgC$}}&ip           &            & $-$        & $-$*       &            & $-$        & $-$*       &            & $-$        & $-$*       &            & $-$        & $-$*       &            &            & $-$         \\
 &ip\_m        & $+$        &            & $-$*       & $+$        &            & $-$*       & $+$        &            & $-$*       & $+$        &            & $-$*       &            &            & $-$         \\
 &m            & $+$*       & $+$*       &            & $+$*       & $+$*       &            & $+$*       & $+$*       &            & $+$*       & $+$*       &            & $+$        & $+$        &             \\
+\hline
 \hline
 \hline
 \multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            & $-$        & $-$*       &            & $-$        & $-$        &            &            & $-$*       &            & $-$        & $-$*       &            & $-$        & $-$*        \\
@@ -109,6 +113,7 @@ Results for \textit{cars} dataset are presented in \cref{fig:cars} and \cref{tab
 &m            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$        & $-$        &            & $-$        & $-$        &            & $-$        & $-$        &             \\
 \hline
 \hline
+\hline
 \multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            & $-$        & $-$*       &            &            & $-$        &            &            & $-$*       &            &            & $-$        &            &            & $-$         \\
 &ip\_m        & $+$        &            & $-$        &            &            & $-$        &            &            & $-$*       &            &            & $-$        &            &            & $-$         \\
 &m            & $+$*       & $+$        &            & $+$        & $+$        &            & $+$*       & $+$*       &            & $+$        & $+$        &            & $+$        & $+$        &             \\
@@ -118,6 +123,7 @@ Results for \textit{cars} dataset are presented in \cref{fig:cars} and \cref{tab
 \multirow{3}{*}{\rotatebox[origin=c]{90}{$avgC$}}&ip           &            & $-$        & $+$*       &            &            & $+$*       &            &            & $+$*       &            &            & $+$*       &            &            & $+$*        \\
 &ip\_m        & $+$        &            & $+$*       &            &            & $+$*       &            &            & $+$*       &            &            & $+$*       &            &            & $+$*        \\
 &m            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$*       & $-$*       &             \\
+\hline
 \hline
 \hline
 \multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            & $-$*       & $-$*       &            & $-$        & $-$        &            & $-$        & $-$*       &            & $-$        & $-$        &            &            & $-$         \\
@@ -131,6 +137,7 @@ Results for \textit{cars} dataset are presented in \cref{fig:cars} and \cref{tab
 &m            & $-$        & $-$*       &            & $+$        & $-$        &            & $+$        & $+$        &            & $-$        & $-$        &            & $-$        & $-$        &             \\
 \hline
 \hline
+\hline
 \multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$*       & $-$        &            & $-$*       & $-$*       &            & $-$        & $-$*        \\
 &ip\_m        & $+$*       &            & $-$*       & $+$*       &            & $+$        & $+$*       &            & $+$*       & $+$*       &            & $-$*       & $+$        &            & $-$*        \\
 &m            & $+$*       & $+$*       &            & $+$*       & $-$        &            & $+$        & $-$*       &            & $+$*       & $+$*       &            & $+$*       & $+$*       &             \\
@@ -142,6 +149,7 @@ Results for \textit{cars} dataset are presented in \cref{fig:cars} and \cref{tab
 &m            & $-$        & $-$*       &            & $-$        & $-$*       &            & $-$        & $-$*       &            & $-$        & $-$*       &            & $-$        & $-$        &             \\
 \hline
 \hline
+\hline
 \multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
 &ip\_m        &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
 &m            &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
@@ -151,6 +159,7 @@ Results for \textit{cars} dataset are presented in \cref{fig:cars} and \cref{tab
 \multirow{3}{*}{\rotatebox[origin=c]{90}{$avgC$}}&ip           &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
 &ip\_m        &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
 &m            &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
+\hline
 \hline
 \hline
 \end{tabular}
