--- a/paper/sample-papers/sections/04-04-iris.tex
+++ b/paper/sample-papers/sections/04-04-iris.tex
@@ -123,6 +123,7 @@ When $\epsilon \approx b\_err$, we reach max of $oneC$ and $oneC \approx 1 - b\_
 &m            &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
 \hline
 \hline
+\hline
 \multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
 &ip\_m        &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
 &m            &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
@@ -132,6 +133,7 @@ When $\epsilon \approx b\_err$, we reach max of $oneC$ and $oneC \approx 1 - b\_
 \multirow{3}{*}{\rotatebox[origin=c]{90}{$avgC$}}&ip           &            &            &            &            &            & $+$        &            &            & $+$        &            &            &            &            &            &             \\
 &ip\_m        &            &            &            &            &            & $+$        &            &            & $+$        &            &            &            &            &            &             \\
 &m            &            &            &            & $-$        & $-$        &            & $-$        & $-$        &            &            &            &            &            &            &             \\
+\hline
 \hline
 \hline
 \multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
@@ -145,6 +147,7 @@ When $\epsilon \approx b\_err$, we reach max of $oneC$ and $oneC \approx 1 - b\_
 &m            &            &            &            & $-$        & $-$        &            & $-$        & $-$        &            & $-$        & $-$        &            &            &            &             \\
 \hline
 \hline
+\hline
 \multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            &            &            &            &            & $+$        &            &            & $+$        &            &            & $+$        &            &            & $+$         \\
 &ip\_m        &            &            &            &            &            & $+$        &            &            & $+$        &            &            & $+$        &            &            & $+$         \\
 &m            &            &            &            & $-$        & $-$        &            & $-$        & $-$        &            & $-$        & $-$        &            & $-$        & $-$        &             \\
@@ -154,6 +157,7 @@ When $\epsilon \approx b\_err$, we reach max of $oneC$ and $oneC \approx 1 - b\_
 \multirow{3}{*}{\rotatebox[origin=c]{90}{$avgC$}}&ip           &            &            &            &            &            & $+$        &            &            & $-$        &            &            & $-$        &            &            & $-$         \\
 &ip\_m        &            &            &            &            &            & $+$        &            &            & $-$        &            &            & $-$        &            &            & $-$         \\
 &m            &            &            &            & $-$        & $-$        &            & $+$        & $+$        &            & $+$        & $+$        &            & $+$        & $+$        &             \\
+\hline
 \hline
 \hline
 \multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            &            &            &            &            & $-$        &            & $-$        & $-$        &            &            & $-$        &            &            & $-$         \\
@@ -167,6 +171,7 @@ When $\epsilon \approx b\_err$, we reach max of $oneC$ and $oneC \approx 1 - b\_
 &m            &            &            &            & $+$        & $+$        &            & $+$        & $-$        &            & $-$        & $-$        &            & $-$        & $-$        &             \\
 \hline
 \hline
+\hline
 \multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
 &ip\_m        &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
 &m            &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
@@ -176,6 +181,7 @@ When $\epsilon \approx b\_err$, we reach max of $oneC$ and $oneC \approx 1 - b\_
 \multirow{3}{*}{\rotatebox[origin=c]{90}{$avgC$}}&ip           &            &            &            &            &            & $+$        &            &            & $+$        &            &            &            &            &            &             \\
 &ip\_m        &            &            &            &            &            & $+$        &            &            & $+$        &            &            &            &            &            &             \\
 &m            &            &            &            & $-$        & $-$        &            & $-$        & $-$        &            &            &            &            &            &            &             \\
+\hline
 \hline
 \hline
 \end{tabular}
