--- a/paper/sample-papers/sections/04-03-glass.tex
+++ b/paper/sample-papers/sections/04-03-glass.tex
@@ -74,6 +74,7 @@ and \cref{fig:glass:avgC-GNB-MPR}.
              && \multicolumn{3}{c|}{$\epsilon=0.01$} & \multicolumn{3}{c|}{$\epsilon=0.05$} & \multicolumn{3}{c|}{$\epsilon=0.1$} & \multicolumn{3}{c|}{$\epsilon=0.15$} & \multicolumn{3}{c}{$\epsilon=0.2$} \\
 \hline
 \hline
+\hline
 \multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            &            &            &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$        & $-$*       &            & $-$        & $-$*        \\
 &ip\_m        &            &            &            & $+$*       &            & $-$*       & $+$*       &            & $-$        & $+$        &            & $-$        & $+$        &            & $-$         \\
 &m            &            &            &            & $+$*       & $+$*       &            & $+$*       & $+$        &            & $+$*       & $+$        &            & $+$*       & $+$        &             \\
@@ -83,6 +84,7 @@ and \cref{fig:glass:avgC-GNB-MPR}.
 \multirow{3}{*}{\rotatebox[origin=c]{90}{$avgC$}}&ip           &            &            &            &            & $-$        & $+$*       &            & $-$        & $+$        &            & $-$        & $+$        &            & $-$        & $+$         \\
 &ip\_m        &            &            &            & $+$        &            & $+$*       & $+$        &            & $+$*       & $+$        &            & $+$        & $+$        &            & $+$         \\
 &m            &            &            &            & $-$*       & $-$*       &            & $-$        & $-$*       &            & $-$        & $-$        &            & $-$        & $-$        &             \\
+\hline
 \hline
 \hline
 \multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            &            &            &            &            & $-$        &            & $-$        & $-$        &            & $-$        & $-$        &            & $-$        & $-$         \\
@@ -96,6 +98,7 @@ and \cref{fig:glass:avgC-GNB-MPR}.
 &m            &            &            &            & $+$        & $+$        &            & $+$        & $+$        &            & $+$        & $+$        &            & $+$        & $+$        &             \\
 \hline
 \hline
+\hline
 \multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            &            &            &            & $-$        & $-$*       &            & $-$        & $-$*       &            & $-$        & $-$*       &            & $-$        & $-$*        \\
 &ip\_m        &            &            &            & $+$        &            & $-$        & $+$        &            & $-$        & $+$        &            & $-$*       & $+$        &            & $-$         \\
 &m            &            &            &            & $+$*       & $+$        &            & $+$*       & $+$        &            & $+$*       & $+$*       &            & $+$*       & $+$        &             \\
@@ -105,6 +108,7 @@ and \cref{fig:glass:avgC-GNB-MPR}.
 \multirow{3}{*}{\rotatebox[origin=c]{90}{$avgC$}}&ip           &            &            &            &            & $-$        & $-$        &            & $-$        & $-$        &            & $-$        & $-$        &            & $-$        & $-$         \\
 &ip\_m        &            &            &            & $+$        &            & $-$        & $+$        &            & $-$        & $+$        &            & $-$        & $+$        &            & $-$         \\
 &m            &            &            &            & $+$        & $+$        &            & $+$        & $+$        &            & $+$        & $+$        &            & $+$        & $+$        &             \\
+\hline
 \hline
 \hline
 \multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            &            &            &            & $-$        & $-$        &            & $-$        & $-$*       &            & $-$        & $-$*       &            & $-$*       & $-$*        \\
@@ -118,6 +122,7 @@ and \cref{fig:glass:avgC-GNB-MPR}.
 &m            &            &            &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$*       & $-$*       &             \\
 \hline
 \hline
+\hline
 \multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            &            &            &            & $-$        & $-$        &            & $-$        & $-$*       &            & $-$        & $-$*       &            & $-$        & $-$*        \\
 &ip\_m        &            &            &            & $+$        &            & $-$        & $+$        &            & $-$*       & $+$        &            & $-$*       & $+$        &            & $-$*        \\
 &m            &            &            &            & $+$        & $+$        &            & $+$*       & $+$*       &            & $+$*       & $+$*       &            & $+$*       & $+$*       &             \\
@@ -127,6 +132,7 @@ and \cref{fig:glass:avgC-GNB-MPR}.
 \multirow{3}{*}{\rotatebox[origin=c]{90}{$avgC$}}&ip           &            &            &            &            & $-$        & $+$        &            & $-$        & $+$*       &            & $-$        & $+$*       &            & $-$        & $+$*        \\
 &ip\_m        &            &            &            & $+$        &            & $+$        & $+$        &            & $+$*       & $+$        &            & $+$*       & $+$        &            & $+$*        \\
 &m            &            &            &            & $-$        & $-$        &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$*       & $-$*       &             \\
+\hline
 \hline
 \hline
 \multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            &            &            &            & $-$        & $-$        &            & $-$        & $-$        &            & $-$        & $-$        &            & $-$        & $+$         \\
@@ -140,6 +146,7 @@ and \cref{fig:glass:avgC-GNB-MPR}.
 &m            &            &            &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$        & $-$*       &             \\
 \hline
 \hline
+\hline
 \multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            &            &            &            & $-$        & $-$*       &            & $-$        & $-$*       &            & $-$        & $-$*       &            & $-$        & $-$*        \\
 &ip\_m        &            &            &            & $+$        &            & $-$        & $+$        &            & $-$        & $+$        &            & $-$        & $+$        &            & $-$         \\
 &m            &            &            &            & $+$*       & $+$        &            & $+$*       & $+$        &            & $+$*       & $+$        &            & $+$*       & $+$        &             \\
@@ -151,6 +158,7 @@ and \cref{fig:glass:avgC-GNB-MPR}.
 &m            &            &            &            & $-$        & $-$*       &            & $-$*       & $-$*       &            & $-$        & $-$        &            & $-$        & $-$        &             \\
 \hline
 \hline
+\hline
 \multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            &            &            &            & $-$        & $-$*       &            & $-$        & $-$*       &            & $-$        & $-$        &            & $-$        & $-$         \\
 &ip\_m        &            &            &            & $+$        &            & $-$*       & $+$        &            & $-$        & $+$        &            & $-$        & $+$        &            & $-$         \\
 &m            &            &            &            & $+$*       & $+$*       &            & $+$*       & $+$        &            & $+$        & $+$        &            & $+$        & $+$        &             \\
@@ -160,6 +168,7 @@ and \cref{fig:glass:avgC-GNB-MPR}.
 \multirow{3}{*}{\rotatebox[origin=c]{90}{$avgC$}}&ip           &            &            &            &            & $-$        & $-$        &            & $-$        & $-$        &            & $-$        & $-$        &            & $-$        & $+$         \\
 &ip\_m        &            &            &            & $+$        &            & $-$        & $+$        &            & $-$        & $+$        &            & $-$        & $+$        &            & $+$         \\
 &m            &            &            &            & $+$        & $+$        &            & $+$        & $+$        &            & $+$        & $+$        &            & $-$        & $-$        &             \\
+\hline
 \hline
 \hline
 \end{tabular}
