--- a/paper/sample-papers/sections/04-06-wave.tex
+++ b/paper/sample-papers/sections/04-06-wave.tex
@@ -64,6 +64,7 @@
              && \multicolumn{3}{c|}{$\epsilon=0.01$} & \multicolumn{3}{c|}{$\epsilon=0.05$} & \multicolumn{3}{c|}{$\epsilon=0.1$} & \multicolumn{3}{c|}{$\epsilon=0.15$} & \multicolumn{3}{c}{$\epsilon=0.2$} \\
 \hline
 \hline
+\hline
 \multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            &            & $+$        &            &            & $+$        &            &            & $+$        &            &            & $-$        &            &            & $+$         \\
 &ip\_m        &            &            & $+$        &            &            & $+$        &            &            & $+$        &            &            & $-$        &            &            & $+$         \\
 &m            & $-$        & $-$        &            & $-$        & $-$        &            & $-$        & $-$        &            & $+$        & $+$        &            & $-$        & $-$        &             \\
@@ -73,6 +74,7 @@
 \multirow{3}{*}{\rotatebox[origin=c]{90}{$avgC$}}&ip           &            &            & $+$*       &            &            & $+$*       &            &            & $+$        &            &            & $+$        &            &            & $-$         \\
 &ip\_m        &            &            & $+$*       &            &            & $+$*       &            &            & $+$        &            &            & $+$        &            &            & $-$         \\
 &m            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$        & $-$        &            & $-$        & $-$        &            & $+$        & $+$        &             \\
+\hline
 \hline
 \hline
 \multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            &            & $-$        &            & $-$        & $-$*       &            & $-$        & $-$*       &            & $-$        & $-$        &            & $-$        & $-$         \\
@@ -86,6 +88,7 @@
 &m            & $-$        & $-$        &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$        & $-$        &            & $-$        & $-$        &             \\
 \hline
 \hline
+\hline
 \multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            &            &            &            &            &            &            &            &            &            &            &            &            &            & $-$         \\
 &ip\_m        &            &            &            &            &            &            &            &            &            &            &            &            &            &            & $-$         \\
 &m            &            &            &            &            &            &            &            &            &            &            &            &            & $+$        & $+$        &             \\
@@ -95,6 +98,7 @@
 \multirow{3}{*}{\rotatebox[origin=c]{90}{$avgC$}}&ip           &            &            &            &            &            &            &            &            &            &            &            &            &            &            & $-$         \\
 &ip\_m        &            &            &            &            &            &            &            &            &            &            &            &            &            &            & $-$         \\
 &m            &            &            &            &            &            &            &            &            &            &            &            &            & $+$        & $+$        &             \\
+\hline
 \hline
 \hline
 \multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            & $-$        & $+$*       &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$*       & $-$*        \\
@@ -108,6 +112,7 @@
 &m            & $-$*       & $-$*       &            & $+$        & $-$        &            & $+$*       & $+$*       &            & $+$*       & $+$*       &            & $+$*       & $+$*       &             \\
 \hline
 \hline
+\hline
 \multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            &            & $+$        &            &            & $+$        &            &            & $+$        &            &            & $+$        &            &            & $-$         \\
 &ip\_m        &            &            & $+$        &            &            & $+$        &            &            & $+$        &            &            & $+$        &            &            & $-$         \\
 &m            & $-$        & $-$        &            & $-$        & $-$        &            & $-$        & $-$        &            & $-$        & $-$        &            & $+$        & $+$        &             \\
@@ -117,6 +122,7 @@
 \multirow{3}{*}{\rotatebox[origin=c]{90}{$avgC$}}&ip           &            &            & $+$*       &            &            & $+$*       &            &            & $+$*       &            &            & $+$        &            &            & $+$         \\
 &ip\_m        &            &            & $+$*       &            &            & $+$*       &            &            & $+$*       &            &            & $+$        &            &            & $+$         \\
 &m            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$        & $-$        &            & $-$        & $-$        &             \\
+\hline
 \hline
 \hline
 \multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            & $-$        & $+$        &            & $-$        & $+$        &            & $-$        & $+$        &            &            & $-$        &            &            & $-$         \\
@@ -130,6 +136,7 @@
 &m            & $-$*       & $-$*       &            & $-$        & $-$*       &            & $-$        & $-$        &            & $-$        & $-$        &            & $-$        & $-$        &             \\
 \hline
 \hline
+\hline
 \multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            & $-$*       & $+$        &            & $-$*       & $+$        &            & $-$*       & $-$        &            & $-$*       & $-$*       &            & $-$*       & $-$*        \\
 &ip\_m        & $+$*       &            & $+$*       & $+$*       &            & $+$*       & $+$*       &            & $+$*       & $+$*       &            & $-$*       & $+$*       &            & $-$*        \\
 &m            & $-$        & $-$*       &            & $-$        & $-$*       &            & $+$        & $-$*       &            & $+$*       & $+$*       &            & $+$*       & $+$*       &             \\
@@ -141,6 +148,7 @@
 &m            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$        & $-$*       &            & $+$        & $-$*       &            & $+$        & $+$        &             \\
 \hline
 \hline
+\hline
 \multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            &            &            &            &            &            &            &            & $-$        &            &            & $+$        &            &            &             \\
 &ip\_m        &            &            &            &            &            &            &            &            & $-$        &            &            & $+$        &            &            &             \\
 &m            &            &            &            &            &            &            & $+$        & $+$        &            & $-$        & $-$        &            &            &            &             \\
@@ -150,6 +158,7 @@
 \multirow{3}{*}{\rotatebox[origin=c]{90}{$avgC$}}&ip           &            &            & $+$*       &            &            & $+$        &            &            & $-$        &            &            & $-$        &            &            &             \\
 &ip\_m        &            &            & $+$*       &            &            & $+$        &            &            & $-$        &            &            & $-$        &            &            &             \\
 &m            & $-$*       & $-$*       &            & $-$        & $-$        &            & $+$        & $+$        &            & $+$        & $+$        &            &            &            &             \\
+\hline
 \hline
 \hline
 \end{tabular}
