Updates from Overleaf

--- a/paper/sample-papers/sections/04-05-user.tex
+++ b/paper/sample-papers/sections/04-05-user.tex
@@ -194,6 +194,8 @@ has the largest value of the baseline error.
 &ip\_m        &            &            &            &            &            & $+$        &            &            & $+$        &            &            & $+$        &            &            &             \\
 &m            &            &            &            & $-$        & $-$        &            & $-$        & $-$        &            & $-$        & $-$        &            &            &            &             \\
 \hline
+\hline
+\hline
 \end{tabular}
 
   }
